src/test/ui/self/elision/ref-mut-self-async.nll.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ref-mut-self-async.rs:12:46
   |
LL |     async fn ref_self(&mut self, f: &u32) -> &u32 {
   |                                              ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#15r

error: lifetime may not live long enough
  --> $DIR/ref-mut-self-async.rs:13:9
   |
LL |     async fn ref_self(&mut self, f: &u32) -> &u32 {
   |                       -
   |                       |
   |                       lifetime `'_` defined here
   |                       lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ref-mut-self-async.rs:18:52
   |
LL |     async fn ref_Self(self: &mut Self, f: &u32) -> &u32 {
   |                                                    ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#15r

error: lifetime may not live long enough
  --> $DIR/ref-mut-self-async.rs:19:9
   |
LL |     async fn ref_Self(self: &mut Self, f: &u32) -> &u32 {
   |                             -
   |                             |
   |                             lifetime `'_` defined here
   |                             lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ref-mut-self-async.rs:22:61
   |
LL |     async fn box_ref_Self(self: Box<&mut Self>, f: &u32) -> &u32 {
   |                                                             ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#15r

error: lifetime may not live long enough
  --> $DIR/ref-mut-self-async.rs:23:9
   |
LL |     async fn box_ref_Self(self: Box<&mut Self>, f: &u32) -> &u32 {
   |                                     -
   |                                     |
   |                                     lifetime `'_` defined here
   |                                     lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ref-mut-self-async.rs:26:61
   |
LL |     async fn pin_ref_Self(self: Pin<&mut Self>, f: &u32) -> &u32 {
   |                                                             ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#15r

error: lifetime may not live long enough
  --> $DIR/ref-mut-self-async.rs:27:9
   |
LL |     async fn pin_ref_Self(self: Pin<&mut Self>, f: &u32) -> &u32 {
   |                                     -
   |                                     |
   |                                     lifetime `'_` defined here
   |                                     lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ref-mut-self-async.rs:30:70
   |
LL |     async fn box_box_ref_Self(self: Box<Box<&mut Self>>, f: &u32) -> &u32 {
   |                                                                      ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#15r

error: lifetime may not live long enough
  --> $DIR/ref-mut-self-async.rs:31:9
   |
LL |     async fn box_box_ref_Self(self: Box<Box<&mut Self>>, f: &u32) -> &u32 {
   |                                             -
   |                                             |
   |                                             lifetime `'_` defined here
   |                                             lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ref-mut-self-async.rs:34:70
   |
LL |     async fn box_pin_ref_Self(self: Box<Pin<&mut Self>>, f: &u32) -> &u32 {
   |                                                                      ^^^^
   |
   = note: hidden type `impl std::future::Future` captures lifetime '_#15r

error: lifetime may not live long enough
  --> $DIR/ref-mut-self-async.rs:35:9
   |
LL |     async fn box_pin_ref_Self(self: Box<Pin<&mut Self>>, f: &u32) -> &u32 {
   |                                             -
   |                                             |
   |                                             lifetime `'_` defined here
   |                                             lifetime `'_` defined here
LL |         f
   |         ^ function was supposed to return data with lifetime `'_` but it is returning data with lifetime `'_`

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0700`.
